--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,8 @@
 Changelog :
 
+- Recompiled for KSP 1.0
+- packaged with uptodate ModuleManager v1.6.2
+
 v 1.7.3 :
 - Recompiled for KSP 0.25
 - Added KSP AVC version checking mod support
