--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,8 @@
 Changelog :
 
+v 1.7.5 [02 May 2015] :
+- Recompiled for KSP v1.0.2
+
 v 1.7.4 [29 Apr 2015] :
 - Recompiled for KSP 1.0
 - packaged with uptodate ModuleManager v1.6.2
