--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,11 @@
 Changelog :
 
+v1.7.8 [12 Oct 2016]
+- Recompiled for KSP v1.2.0 (b1586)
+- Removed KSPUtil reference
+- Removed "using Linq" as advised by Squad
+- Bundled Modulemanager v2.7.1
+
 v1.7.7 [26 Jun 2016]
 - Recompiled and updated for KSP v1.1.3 (b1289)
 - Bundled Modulemanager v2.6.25
